--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,11 @@
     />
     <!-- import bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <!-- Import Animate.css for animations. web site: https://animate.style/ -->
+    <!-- <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  /> -->
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
